test/sc++/error/mesh-access.scpp
../../scc/error/mesh-access.sc